<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:layout_margin="16dp"
    tools:context="com.danielpape.EMOM.SetUpIntervalEMOMActivity">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/workout_length"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/totalTimeTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/_10_mins"
                android:textAlignment="center"
                android:textAppearance="@android:style/TextAppearance.Material.Large"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="96sp"
                android:textStyle="bold"
                android:typeface="monospace"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <SeekBar
        android:id="@+id/timeSlider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalTimeTextView"
        tools:layout_conversion_absoluteHeight="18dp"
        tools:layout_conversion_absoluteWidth="379dp"
        tools:layout_conversion_absoluteX="16dp"
        tools:layout_conversion_absoluteY="373dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="13dp"
                android:text="@string/interval_lengths"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/timeSlider"
                android:id="@+id/textView"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/IntervalLengthLabel" />


            <TextView
                android:id="@+id/IntervalLengthLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/_40s_work_20s_rest"
                android:textAppearance="@android:style/TextAppearance.Material.Large"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toTopOf="@+id/workRestSlider"
                app:layout_constraintTop_toTopOf="@+id/textView"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent" />


    <SeekBar
        android:id="@+id/workRestSlider"
        android:layout_width="match_parent"
        android:layout_height="18dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="106dp"
        android:max="60"
        android:progress="40"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_conversion_absoluteHeight="18dp"
        tools:layout_conversion_absoluteWidth="379dp"
        tools:layout_conversion_absoluteX="16dp"
        tools:layout_conversion_absoluteY="465dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/timer_will_count_you_down_into_each_period_work_when_the_screen_is_green_rest_when_the_screen_is_red"
                app:layout_constraintBottom_toTopOf="@+id/statusChangeButton"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/workRestSlider"
                app:layout_constraintVertical_bias="0.713"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />


        <Button
            android:id="@+id/statusChangeButton"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:backgroundTint="@color/colorAccent"
            android:elevation="0dp"
            android:onClick="controlTimer"
            android:text="@string/start_workout"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Inverse"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" />

</android.support.constraint.ConstraintLayout>
